--- a/themes/default/css/main.css
+++ b/themes/default/css/main.css
@@ -181,7 +181,7 @@ a:visited {
 
 .whats-next {
 	width: 555px;
-	height: 95px;
+	height: 135px;
 	padding: 0 5px;
 }
 
@@ -197,8 +197,11 @@ a:visited {
 
 .whats-next .in-queue .delete {
 	position: absolute;
+	border: 1px solid white;
 	top: 0;
 	right: 0;
+	margin: 5px;
+	background: black;
 }
 
 
